--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-flask==3.0.3
-pandas==2.2.2
-numpy==1.26.4
+flask
+pandas
+numpy
 scikit-learn==1.5.2
-nltk==3.9.1
-joblib==1.4.2
+nltk
+joblib
 waitress
 flask-cors
 gunicorn
